# Spearhead

./: .dockerignore  .env.example  .gitignore  CURRENT_TASK.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NEXT_AGENT_PROMPT.md  README.md  data.csv  docker-compose.yml  pyproject.toml  requirements.txt  run_iron_view.sh
agent_handover/: CURRENT_TASK.md  NEXT_AGENT_PROMPT.md
assets/: dashboard.js  field_command.css  iron_glass.css  tactical.css  tactical_flat.css
config/: fields.yaml  operational_standards.yaml  settings.yaml
data/: ironview.db  kfir_week7_form_schema.json
data/input/: mock_kfir.xlsx
data/sync_cache/: platoon_loadout.xlsx
docs/: ARCHITECTURE.md  KFIR_FILE_ANALYSIS.md  PROJECT_PLAN.md  PROJECT_TASKS.md  ROADMAP_2.0.md  RUNBOOK.md  index.html  אפיון פרויקט- דוחות עיתיים.lyx
docs/Files/: דוחות פלוגת כפיר.xlsx  טופס דוחות סמפ כפיר. (תגובות) (1).xlsx  טופס דוחות סמפ כפיר. (תגובות).xlsx  טופס דוחות סמפ כפיר.html  מסמך דוחות גדודי (1).xlsx  מסמך דוחות גדודי.xlsx
docs/archive/: README.md
docs/cloud/: ACCESS_CONTROL_RUNBOOK.md  DATA_SOURCES.md  ENV_SETUP_CHECKLIST.md  FOCUSED_REDESIGN_ROADMAP.md  KFIR_FORM_SPEC_DRAFT.md  NEXT_AGENT_PROMPT_2026-02-11.md  NEXT_AGENT_PROMPT_2026-02-12.md  REMAINING_TASKS_STATUS.md  SESSION_HANDOFF_2026-02-11.md  SETUP_STAGE_A.md  TOMORROW_TASKS_2026-02-12.md  WORKING_PLAN.md
docs/forms/: COMPANY_EQUIPMENT_STANDARDS_CONTRACT.md  FORMS_CONTRACT.md  FORMS_ROLLOUT_CHECKLIST.md  LEGACY_FORM_ANALYSIS.md  README.md  contract_company_assets.csv  contract_tank_items.csv  kfir_company_form_blueprint.json  kfir_google_form_apps_script.gs  kfir_tank_ids.json
docs/planning/: PROJECT_PLAN.md  ROADMAP_2.0.md  implementation_plan.md
frontend/: app.js  index.html  styles.css
frontend-app/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend-app/src/: App.jsx  api.js  index.css  main.jsx
reports/: battalion_2026-W01.xlsx  experiement_kfir.html  kfir_ai_report.html  kfir_report.html  platoon_כפיר_2026-W01.xlsx  report.html  report_latest.html
scripts/: bootstrap-dev-env.sh  build-ui.sh  clean-db.sh  clean-ui.sh  dev-api.sh  dev-one-click.sh  dev-ui.sh  init_db.py  local-dev.sh  release-check.sh  run-local.sh  seed-and-export.sh  setup-venv.sh  sync-and-export.sh  test.sh
scripts/cloud/: deploy-api-cloudrun.sh  deploy-stage-a.sh  deploy-worker-cloudrun.sh  enable-gcp-apis.sh  ingest-company-sources.py  ingest-matrix-sheet.py  manage-authorized-user.sh
src/iron_view/: main.py  (+3 more)
templates/: dashboard.j2
tests/: conftest.py  test_adapters.py  test_ai.py  test_analytics.py  test_api.py  test_api_security.py  test_architecture.py  test_engine.py  test_erosion.py  test_field_mapper.py  test_import_service.py  test_integrity.py  test_loader.py  test_logic.py  test_matrix_ingest.py  test_queries.py  test_sync.py  test_v1_api.py
utils/: generate_mock_excel.py
(+163 files in other folders)
