[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spearhead"
version = "1.0.0"
description = "Responses-only readiness analytics API and dashboard."
authors = [
    {name = "Principal Software Architect", email = "architect@spearhead.com"},
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas==2.2.0",
    "jinja2>=3.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "google-auth==2.48.0",
    "google-cloud-firestore>=2.21.0",
    "requests>=2.32.3",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
spearhead = "spearhead.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = "src"
